fixing small details on spacing

--- a/src/styles/_SubInfo.scss
+++ b/src/styles/_SubInfo.scss
@@ -23,7 +23,7 @@
     transition: font-size .3s ease-in-out, opacity .3s ease-in-out;
 
     @media only screen and (max-width: $large-breakpoint) {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       padding-top: 0;
     }
 
