--- a/src/styles/_Tags.scss
+++ b/src/styles/_Tags.scss
@@ -2,7 +2,7 @@
   display: flex;
   height: 4rem;
   justify-content: space-between;
-  padding-top: 3rem;
+  padding-top: 1rem;
   width: auto;
 
   @media only screen and (max-width: $medium-breakpoint) {
